--- a/po/fr.po
+++ b/po/fr.po
@@ -1,11 +1,15 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: Wike\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2021-04-20 14:31+0200\n"
+"PO-Revision-Date: \n"
+"Last-Translator: Florian R\n"
+"Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: POEditor.com\n"
-"Project-Id-Version: Wike\n"
-"Language: fr\n"
 
 #: ../src/view.py:115
 msgid "Article not found"
@@ -27,26 +31,39 @@ msgstr "Vérifier votre connection Internet et réessayer"
 msgid "Recent articles"
 msgstr "Articles récents"
 
-#: ../src/window.py:131 ../src/window.py:206
+#: ../src/window.py:141 ../src/window.py:246
 msgid "New bookmark: "
 msgstr "Nouveau signet : "
 
-#: ../src/window.py:264
+#: ../src/window.py:304
 msgid "Wikipedia URL copied to clipboard"
 msgstr "URL de Wikipédia copiée dans le presse-papiers"
+
+#: ../src/prefs.py:72
+msgid "Wikipedia main page"
+msgstr "Page principale de Wikipédia"
+
+#: ../src/prefs.py:72 ../data/ui/menu.ui:13
+msgid "Random article"
+msgstr "Article aléatoire"
+
+#: ../src/prefs.py:72
+msgid "Last article"
+msgstr "Dernier article"
 
 #: ../src/search.py:249
 msgid "Default search language: "
 msgstr "Langue de recherche par défault : "
 
-#. Don't remove format tags!
 #: ../src/bookmarks.py:46
-msgid "<b>No bookmarks</b>\n"
+msgid ""
+"<b>No bookmarks</b>\n"
 "\n"
 "<small>Use the <i>Add Bookmark</i> button\n"
 "or click a link with the middle mouse button\n"
 "to add bookmarks to the list</small>"
-msgstr "<b>Aucun signet</b>\n"
+msgstr ""
+"<b>Aucun signet</b>\n"
 "\n"
 "<small>Utilisez le bouton <i>Ajouter un signet</i>\n"
 "ou cliquez sur un lien avec le bouton central de la souris\n"
@@ -60,7 +77,7 @@ msgstr "Effacer la liste des signets ?"
 msgid "All bookmarks in the list will be removed permanently."
 msgstr "Tous les favoris de la liste seront supprimés définitivement."
 
-#: ../src/bookmarks.py:139 ../data/ui/bookmarks.ui:74
+#: ../src/bookmarks.py:139 ../data/ui/bookmarks.ui:70
 msgid "Clear List"
 msgstr "Effacer la liste"
 
@@ -70,21 +87,20 @@ msgid "Search suggestions"
 msgstr "Suggestions de recherche"
 
 #: ../data/ui/about.ui:8
-msgid "Search and read Wikipedia articles\n"
+msgid ""
+"Search and read Wikipedia articles\n"
 "All content from Wikipedia.org\n"
 "and available under CC BY-SA 3.0 unless otherwise noted"
-msgstr "Rechercher et lire des articles de Wikipédia\n"
+msgstr ""
+"Rechercher et lire des articles de Wikipédia\n"
 "Tout le contenu provient de Wikipedia.org\n"
 "et disponible sous CC BY-SA 3.0, sauf mention contraire."
 
-#. Add your name like this:
-#. 
-#. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:13
 msgid "translator-credits"
 msgstr "Florian R"
 
-#: ../data/ui/bookmarks.ui:62
+#: ../data/ui/bookmarks.ui:58
 msgid "Add Bookmark"
 msgstr "Ajouter un signet"
 
@@ -188,99 +204,90 @@ msgctxt "shortcut window"
 msgid "Add bookmark"
 msgstr "Ajouter aux signets"
 
-#: ../data/ui/menu.ui:7 ../data/ui/prefs.ui:111
+#: ../data/ui/menu.ui:8
 msgid "Wikipedia Main Page"
 msgstr "Page principale de Wikipédia"
 
-#: ../data/ui/menu.ui:12 ../data/ui/prefs.ui:112
-msgid "Random article"
-msgstr "Article aléatoire"
-
-#: ../data/ui/menu.ui:17
+#: ../data/ui/menu.ui:18
 msgid "Recent Articles"
 msgstr "Articles récents"
 
-#: ../data/ui/menu.ui:22
+#: ../data/ui/menu.ui:23
 msgid "Reload Page"
 msgstr "Recharger la page"
 
-#: ../data/ui/menu.ui:29
+#: ../data/ui/menu.ui:30
 msgid "Search Text in Page"
 msgstr "Rechercher Texte dans la page"
 
-#: ../data/ui/menu.ui:35
+#: ../data/ui/menu.ui:36
 msgid "Open Wikipedia Page in Browser"
 msgstr "Ouvrir la page Wikipédia dans le navigateur"
 
-#: ../data/ui/menu.ui:39
+#: ../data/ui/menu.ui:40
 msgid "Copy Wikipedia URL to Clipboard"
 msgstr "Copier l'URL de Wikipédia dans le presse-papiers"
 
-#: ../data/ui/menu.ui:45
+#: ../data/ui/menu.ui:46
 msgid "Preferences"
 msgstr "Préférences"
 
-#: ../data/ui/menu.ui:51
+#: ../data/ui/menu.ui:52
 msgid "Keyboard Shortcuts"
 msgstr "Raccourcis clavier"
 
-#: ../data/ui/menu.ui:55
+#: ../data/ui/menu.ui:56
 msgid "About Wike"
 msgstr "À propos de Wike"
 
-#: ../data/ui/prefs.ui:50
-msgid "Behavior"
-msgstr "Comportement"
-
-#: ../data/ui/prefs.ui:74
-msgid "When Wike starts load"
-msgstr "Lors du démarrage de Wike charger"
-
-#: ../data/ui/prefs.ui:86
-msgid "Keep a list of recent articles"
-msgstr "Conserver une liste des articles récents"
-
-#: ../data/ui/prefs.ui:98
-msgid "Clear bookmarks list on exit"
-msgstr "Effacer la liste des signets à la fermeture"
-
-#: ../data/ui/prefs.ui:113
-msgid "Last article"
-msgstr "Dernier article"
-
-#: ../data/ui/prefs.ui:159
-msgid "Appearance"
-msgstr "Apparence"
-
-#: ../data/ui/prefs.ui:183
-msgid "Font size for articles"
-msgstr "Taille de police des articles"
-
-#: ../data/ui/prefs.ui:213
+#: ../data/ui/prefs.ui:14
 msgid "General"
 msgstr "Général"
 
-#: ../data/ui/prefs.ui:231
+#: ../data/ui/prefs.ui:20
+msgid "Behavior"
+msgstr "Comportement"
+
+#: ../data/ui/prefs.ui:23
+msgid "When Wike starts load"
+msgstr "Lors du démarrage de Wike charger"
+
+#: ../data/ui/prefs.ui:29
+msgid "Keep a list of recent articles"
+msgstr "Conserver une liste des articles récents"
+
+#: ../data/ui/prefs.ui:43
+msgid "Clear bookmarks list on exit"
+msgstr "Effacer la liste des signets à la fermeture"
+
+#: ../data/ui/prefs.ui:61
+msgid "Appearance"
+msgstr "Apparence"
+
+#: ../data/ui/prefs.ui:64
+msgid "Font size for articles"
+msgstr "Taille de police des articles"
+
+#: ../data/ui/prefs.ui:89
+msgid "Languages"
+msgstr "Langues"
+
+#: ../data/ui/prefs.ui:95
 msgid "Filter available languages"
 msgstr "Filtrer les langues disponibles"
 
-#: ../data/ui/prefs.ui:274
+#: ../data/ui/prefs.ui:129
 msgid "Select all"
 msgstr "Tout sélectionner"
 
-#: ../data/ui/prefs.ui:286
+#: ../data/ui/prefs.ui:141
 msgid "Select none"
 msgstr "Ne rien sélectionner"
-
-#: ../data/ui/prefs.ui:306
-msgid "Languages"
-msgstr "Langues"
 
 #: ../data/ui/header-spinner.ui:23
 msgid "Loading Article"
 msgstr "Chargement de l'article"
 
-#. Don't translate app name!
 #: ../data/com.github.hugolabe.Wike.desktop.in:3
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:7
 msgid "Wike"
@@ -291,19 +298,27 @@ msgstr "Wike"
 msgid "Wikipedia Reader"
 msgstr "Lecteur Wikipédia"
 
-#. Don't translate!
 #: ../data/com.github.hugolabe.Wike.desktop.in:5
 msgid "com.github.hugolabe.Wike"
 msgstr "com.github.hugolabe.Wike"
 
-#. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
 msgid "Wikipedia;Encyclopedia;"
 msgstr "Wikipedia;Encyclopédie;"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:11
-msgid "Wike is a Wikipedia reader for the GNOME Desktop. Provides access to all the content of this online encyclopedia in a native application, with a simpler and distraction-free view of articles."
-msgstr "Wike est un lecteur de Wikipedia pour le bureau GNOME. Il permet d'accéder à tout le contenu de cette encyclopédie en ligne dans une application native, avec une vue simple et sans distraction des articles."
+msgid ""
+"Wike is a Wikipedia reader for the GNOME Desktop. Provides access to all the "
+"content of this online encyclopedia in a native application, with a simpler "
+"and distraction-free view of articles."
+msgstr ""
+"Wike est un lecteur de Wikipedia pour le bureau GNOME. Il permet d'accéder à "
+"tout le contenu de cette encyclopédie en ligne dans une application native, "
+"avec une vue simple et sans distraction des articles."
+
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
+msgid "Features:"
+msgstr "Fonctionnalités : "
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:20
 msgid "Multiple languages"
@@ -329,16 +344,7 @@ msgstr "Sommaire de l'article"
 msgid "View article in other languages"
 msgstr "Voir l'article dans d'autres langues"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:54
-msgid "Initial release."
-msgstr "Version initiale."
-
-#. Don't translate
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:60
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:94
 msgid "Hugo Olabera"
 msgstr "Hugo Olabera"
-
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
-msgid "Features:"
-msgstr "Fonctionnalités : "
 
