--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+wike (1.3.2) focal; urgency=medium
+
+  * New release with minor changes
+
 wike (1.3.1) focal; urgency=medium
 
   * Debian Package
