--- a/po/it.po
+++ b/po/it.po
@@ -1,69 +1,52 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Wike\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-27 19:06+0200\n"
-"PO-Revision-Date: 2021-05-09 09:32+0100\n"
-"Last-Translator: Albano Battistella <albano_battistella@hotmail.com>\n"
-"Language-Team: Albano Battistella <albano_battistella@hotmail.com>\n"
-"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: POEditor.com\n"
+"Project-Id-Version: Wike\n"
+"Language: it\n"
 
-#: ../src/view.py:127
+#: ../src/view.py:143
 msgid "Article not found"
 msgstr "Articolo non trovato"
 
-#: ../src/view.py:128
+#: ../src/view.py:144
 msgid "Can't find any results for requested query"
 msgstr "Impossibile trovare risultati per la domanda richiesta"
 
-#: ../src/view.py:130
+#: ../src/view.py:146
 msgid "Can't access Wikipedia"
 msgstr "Impossibile accedere a Wikipedia"
 
-#: ../src/view.py:131
+#: ../src/view.py:147
 msgid "Check your Internet connection and try again"
 msgstr "Controlla la tua connessione Internet e riprova"
 
-#: ../src/view.py:203
+#: ../src/view.py:219
 msgid "Recent articles"
 msgstr "Articoli recenti"
 
-#: ../src/window.py:141 ../src/window.py:246
+#: ../src/window.py:144 ../src/window.py:249
 msgid "New bookmark: "
 msgstr "Nuovo segnalibro: "
 
-#: ../src/window.py:304
+#: ../src/window.py:307
 msgid "Wikipedia URL copied to clipboard"
 msgstr "URL di Wikipedia copiato negli appunti"
-
-#: ../src/prefs.py:75
-msgid "Wikipedia main page"
-msgstr "Pagina principale di Wikipedia"
-
-#: ../src/prefs.py:75 ../data/ui/menu.ui:13
-msgid "Random article"
-msgstr "Articolo casuale"
-
-#: ../src/prefs.py:75
-msgid "Last article"
-msgstr "Ultimo articolo"
 
 #: ../src/search.py:249
 msgid "Default search language: "
 msgstr "Lingua di ricerca predefinita: "
 
+#. Don't remove format tags!
 #: ../src/bookmarks.py:46
-msgid ""
-"<b>No bookmarks</b>\n"
+msgid "<b>No bookmarks</b>\n"
 "\n"
 "<small>Use the <i>Add Bookmark</i> button\n"
 "or click a link with the middle mouse button\n"
 "to add bookmarks to the list</small>"
-msgstr ""
-"<b>Nessun segnalibro</b>\n"
+msgstr "<b>Nessun segnalibro</b>\n"
 "\n"
 "<small>Utilizza il pulsante <i>Aggiungi segnalibro</i>\n"
 "oppure fai clic su un link con il pulsante centrale del mouse\n"
@@ -87,15 +70,16 @@ msgid "Search suggestions"
 msgstr "Suggerimenti di ricerca"
 
 #: ../data/ui/about.ui:8
-msgid ""
-"Search and read Wikipedia articles\n"
+msgid "Search and read Wikipedia articles\n"
 "All content from Wikipedia.org\n"
 "and available under CC BY-SA 3.0 unless otherwise noted"
-msgstr ""
-"Cerca e leggi articoli di Wikipedia\n"
+msgstr "Cerca e leggi articoli di Wikipedia\n"
 "Tutto il contenuto da Wikipedia.org\n"
 "e disponibile sotto CC BY-SA 3.0 se non diversamente specificato"
 
+#. Add your name like this:
+#. 
+#. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:13
 msgid "translator-credits"
 msgstr "Albano Battistella"
@@ -208,6 +192,10 @@ msgstr "Aggiungi segnalibro"
 msgid "Wikipedia Main Page"
 msgstr "Pagina principale di Wikipedia"
 
+#: ../src/prefs.py:75 ../data/ui/menu.ui:13
+msgid "Random article"
+msgstr "Articolo casuale"
+
 #: ../data/ui/menu.ui:18
 msgid "Recent Articles"
 msgstr "Articoli recenti"
@@ -232,17 +220,13 @@ msgstr "Copia l'URL di Wikipedia negli Appunti"
 msgid "Preferences"
 msgstr "Preferenze"
 
-#: ../data/ui/menu.ui:52
+#: ../data/ui/menu.ui:56
 msgid "Keyboard Shortcuts"
 msgstr "Scorciatoie da tastiera"
 
-#: ../data/ui/menu.ui:56
+#: ../data/ui/menu.ui:60
 msgid "About Wike"
 msgstr "A proposito di Wike"
-
-#: ../data/ui/prefs.ui:14
-msgid "General"
-msgstr "Generale"
 
 #: ../data/ui/prefs.ui:20
 msgid "Behavior"
@@ -260,6 +244,10 @@ msgstr "Tieni un elenco degli articoli recenti"
 msgid "Clear bookmarks list on exit"
 msgstr "Cancella l'elenco dei segnalibri all'uscita"
 
+#: ../src/prefs.py:75
+msgid "Last article"
+msgstr "Ultimo articolo"
+
 #: ../data/ui/prefs.ui:61
 msgid "Appearance"
 msgstr "Aspetto"
@@ -268,13 +256,9 @@ msgstr "Aspetto"
 msgid "Font size for articles"
 msgstr "Dimensione del carattere per gli articoli"
 
-#: ../data/ui/prefs.ui:81
-msgid "Use custom font for articles"
-msgstr "Usa caratteri personalizzati per gli articoli"
-
-#: ../data/ui/prefs.ui:99
-msgid "Languages"
-msgstr "Lingue"
+#: ../data/ui/prefs.ui:14
+msgid "General"
+msgstr "Generale"
 
 #: ../data/ui/prefs.ui:105
 msgid "Filter available languages"
@@ -288,10 +272,15 @@ msgstr "Seleziona tutto"
 msgid "Select none"
 msgstr "Non selezionare niente"
 
+#: ../data/ui/prefs.ui:99
+msgid "Languages"
+msgstr "Lingue"
+
 #: ../data/ui/header-spinner.ui:23
 msgid "Loading Article"
 msgstr "Carica Articolo"
 
+#. Don't translate app name!
 #: ../data/com.github.hugolabe.Wike.desktop.in:3
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:7
 msgid "Wike"
@@ -302,27 +291,19 @@ msgstr "Wike"
 msgid "Wikipedia Reader"
 msgstr "Lettore di Wikipedia"
 
+#. Don't translate!
 #: ../data/com.github.hugolabe.Wike.desktop.in:5
 msgid "com.github.hugolabe.Wike"
 msgstr "com.github.hugolabe.Wike"
 
+#. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
 msgid "Wikipedia;Encyclopedia;"
 msgstr "Wikipedia; Enciclopedia;"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:11
-msgid ""
-"Wike is a Wikipedia reader for the GNOME Desktop. Provides access to all the "
-"content of this online encyclopedia in a native application, with a simpler "
-"and distraction-free view of articles."
-msgstr ""
-"Wike è un lettore di Wikipedia per il desktop GNOME. Fornisce accesso a "
-"tutto il contenuto di questa enciclopedia online in un'applicazione nativa, "
-"con una visualizzazione degli articoli più semplice e priva di distrazioni."
-
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
-msgid "Features:"
-msgstr "Caratteristiche:"
+msgid "Wike is a Wikipedia reader for the GNOME Desktop. Provides access to all the content of this online encyclopedia in a native application, with a simpler and distraction-free view of articles."
+msgstr "Wike è un lettore di Wikipedia per il desktop GNOME. Fornisce accesso a tutto il contenuto di questa enciclopedia online in un'applicazione nativa, con una visualizzazione degli articoli più semplice e priva di distrazioni."
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:20
 msgid "Multiple languages"
@@ -348,6 +329,23 @@ msgstr "Indice dei contenuti dell'articolo"
 msgid "View article in other languages"
 msgstr "Visualizza l'articolo in altre lingue"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:111
-msgid "Hugo Olabera"
-msgstr "Hugo Olabera"
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
+msgid "Features:"
+msgstr "Caratteristiche:"
+
+#: ../src/prefs.py:75
+msgid "Wikipedia main page"
+msgstr "Pagina principale di Wikipedia"
+
+#: ../data/ui/prefs.ui:81
+msgid "Use custom font for articles"
+msgstr "Usa caratteri personalizzati per gli articoli"
+
+#: ../data/ui/menu.ui:50
+msgid "Dark Mode"
+msgstr "Modalità scura"
+
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
+msgid "Dark mode"
+msgstr "Modalità scura"
+
