--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+wike (1.5.0) focal; urgency=medium
+
+  * New release with GNOME Shell search integration
+
 wike (1.4.2) focal; urgency=medium
 
   * Translations & bug fixes
