--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,33 +7,33 @@ msgstr ""
 "Project-Id-Version: Wike\n"
 "Language: pt-br\n"
 
-#: ../src/view.py:143
+#: ../src/view.py:154
 msgid "Article not found"
 msgstr "Artigo não encontrado"
 
-#: ../src/view.py:144
+#: ../src/view.py:155
 msgid "Can't find any results for requested query"
-msgstr "Nenhun resultado para a busca"
+msgstr "Não é possível encontrar nenhum resultado para a consulta solicitada"
 
-#: ../src/view.py:146
+#: ../src/view.py:157
 msgid "Can't access Wikipedia"
-msgstr "Sem acesso à Wikipedia"
+msgstr "Não é possível acessar a Wikipédia"
 
-#: ../src/view.py:147
+#: ../src/view.py:158
 msgid "Check your Internet connection and try again"
 msgstr "Verifique sua conexão de internet e tente novamente"
 
-#: ../src/view.py:219
+#: ../src/view.py:233
 msgid "Recent articles"
 msgstr "Artigos recentes"
 
-#: ../src/window.py:144 ../src/window.py:249
+#: ../src/window.py:150 ../src/window.py:255
 msgid "New bookmark: "
 msgstr "Novo marcador: "
 
-#: ../src/window.py:307
+#: ../src/window.py:313
 msgid "Wikipedia URL copied to clipboard"
-msgstr "URL da Wikipedua copiada"
+msgstr "URL da Wikipédia copiado para a área de transferência"
 
 #: ../src/search.py:249
 msgid "Default search language: "
@@ -46,11 +46,15 @@ msgid "<b>No bookmarks</b>\n"
 "<small>Use the <i>Add Bookmark</i> button\n"
 "or click a link with the middle mouse button\n"
 "to add bookmarks to the list</small>"
-msgstr "<b>Sem marcadores</b>"
+msgstr "<b>Sem marcadores</b>\n"
+"\n"
+"<small>Use o botão <i>Adicionar marcador</i>\n"
+"ou clique em um link com o botão do meio do mouse\n"
+"para adicionar marcadores na lista</small>"
 
 #: ../src/bookmarks.py:137
 msgid "Clear Bookmarks List?"
-msgstr "Limpar lista de favoritos?"
+msgstr "Limpar lista de marcadores?"
 
 #: ../src/bookmarks.py:138
 msgid "All bookmarks in the list will be removed permanently."
@@ -69,7 +73,7 @@ msgstr "Pesquisar sugestões"
 msgid "Search and read Wikipedia articles\n"
 "All content from Wikipedia.org\n"
 "and available under CC BY-SA 3.0 unless otherwise noted"
-msgstr "Pesquisar e ler artigos da Wikipedia\n"
+msgstr "Pesquisar e ler artigos da Wikipédia\n"
 "Todo conteúdo do Wikipedia.org\n"
 "e disponível pela CC BY-SA 3.0 se não mencionado explicitamente"
 
@@ -78,11 +82,12 @@ msgstr "Pesquisar e ler artigos da Wikipedia\n"
 #. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:13
 msgid "translator-credits"
-msgstr "Gustavo Machado Peredo"
+msgstr "Gustavo Machado Peredo\n"
+"Gustavo Costa <xfgusta@gmail.com>"
 
 #: ../data/ui/bookmarks.ui:58
 msgid "Add Bookmark"
-msgstr "Adicionar marcadores"
+msgstr "Adicionar marcador"
 
 #: ../data/ui/shortcuts.ui:14
 msgctxt "shortcut window"
@@ -92,17 +97,17 @@ msgstr "Geral"
 #: ../data/ui/shortcuts.ui:18
 msgctxt "shortcut window"
 msgid "Table of contents"
-msgstr "Tabela de conteúdos"
+msgstr "Índice"
 
 #: ../data/ui/shortcuts.ui:25
 msgctxt "shortcut window"
 msgid "View article in other languages"
-msgstr "Veja artigos em outras línguas"
+msgstr "Veja artigos noutras línguas"
 
 #: ../data/ui/shortcuts.ui:32
 msgctxt "shortcut window"
 msgid "Search text in page"
-msgstr "Pesquisar texto na págiba"
+msgstr "Pesquisa texto na página"
 
 #: ../data/ui/shortcuts.ui:39
 msgctxt "shortcut window"
@@ -112,17 +117,17 @@ msgstr "Preferências"
 #: ../data/ui/shortcuts.ui:46
 msgctxt "shortcut window"
 msgid "Select all"
-msgstr "Selecionar todos"
+msgstr "Seleciona todos"
 
 #: ../data/ui/shortcuts.ui:53
 msgctxt "shortcut window"
 msgid "Copy selection"
-msgstr "Copiar seleção"
+msgstr "Copia seleção"
 
 #: ../data/ui/shortcuts.ui:60
 msgctxt "shortcut window"
 msgid "Copy Wikipedia URL"
-msgstr "Copiar URL da Wikipedia"
+msgstr "Copia o URL da Wikipédia"
 
 #: ../data/ui/shortcuts.ui:67
 msgctxt "shortcut window"
@@ -142,17 +147,17 @@ msgstr "Navegação"
 #: ../data/ui/shortcuts.ui:87
 msgctxt "shortcut window"
 msgid "Search articles"
-msgstr "Pesquisar artigos"
+msgstr "Pesquisa artigos"
 
 #: ../data/ui/shortcuts.ui:94
 msgctxt "shortcut window"
 msgid "Wikipedia main page"
-msgstr "Página principal da Wikipedia"
+msgstr "Página principal da Wikipédia"
 
 #: ../data/ui/shortcuts.ui:101
 msgctxt "shortcut window"
 msgid "Show recent articles"
-msgstr "Mostrar artigos recentes"
+msgstr "Mostra artigos recentes"
 
 #: ../data/ui/shortcuts.ui:108
 msgctxt "shortcut window"
@@ -177,18 +182,18 @@ msgstr "Marcadores"
 #: ../data/ui/shortcuts.ui:135
 msgctxt "shortcut window"
 msgid "Show bookmarks"
-msgstr "Mostrar marcadores"
+msgstr "Mostra marcadores"
 
 #: ../data/ui/shortcuts.ui:142
 msgctxt "shortcut window"
 msgid "Add bookmark"
-msgstr "Adicionar marcadores"
+msgstr "Adiciona marcador"
 
 #: ../data/ui/menu.ui:8
 msgid "Wikipedia Main Page"
-msgstr "Página principal da Wikipedia"
+msgstr "Página principal da Wikipédia"
 
-#: ../src/prefs.py:75 ../data/ui/menu.ui:13
+#: ../src/prefs.py:81 ../data/ui/menu.ui:13
 msgid "Random article"
 msgstr "Artigo aleatório"
 
@@ -206,7 +211,7 @@ msgstr "Pesquisar texto na página"
 
 #: ../data/ui/menu.ui:36
 msgid "Open Wikipedia Page in Browser"
-msgstr "Abir página no navegador"
+msgstr "Abrir página da Wikipédia no navegador"
 
 #: ../data/ui/menu.ui:40
 msgid "Copy Wikipedia URL to Clipboard"
@@ -228,47 +233,31 @@ msgstr "Sobre o Wike"
 msgid "Behavior"
 msgstr "Comportamento"
 
-#: ../data/ui/prefs.ui:23
-msgid "When Wike starts load"
-msgstr "Quando o Wike começar a carregar"
-
-#: ../data/ui/prefs.ui:29
+#: ../data/ui/prefs.ui:135
 msgid "Keep a list of recent articles"
 msgstr "Manter uma lista de artigos recentes"
 
-#: ../data/ui/prefs.ui:43
-msgid "Clear bookmarks list on exit"
-msgstr "Limpar lista de marcadores ao sair"
-
-#: ../src/prefs.py:75
+#: ../src/prefs.py:81
 msgid "Last article"
 msgstr "Último artigo"
-
-#: ../data/ui/prefs.ui:61
-msgid "Appearance"
-msgstr "Aparência"
-
-#: ../data/ui/prefs.ui:64
-msgid "Font size for articles"
-msgstr "Tamanho de fonte para os artigos"
 
 #: ../data/ui/prefs.ui:14
 msgid "General"
 msgstr "Geral"
 
-#: ../data/ui/prefs.ui:105
+#: ../data/ui/prefs.ui:184
 msgid "Filter available languages"
 msgstr "Filtrar línguas disponíveis"
 
-#: ../data/ui/prefs.ui:139
+#: ../data/ui/prefs.ui:218
 msgid "Select all"
 msgstr "Selecionar todos"
 
-#: ../data/ui/prefs.ui:151
+#: ../data/ui/prefs.ui:230
 msgid "Select none"
-msgstr "Selecionar nenhun"
+msgstr "Selecionar nenhum"
 
-#: ../data/ui/prefs.ui:99
+#: ../data/ui/prefs.ui:178
 msgid "Languages"
 msgstr "Línguas"
 
@@ -285,17 +274,12 @@ msgstr "Wike"
 #: ../data/com.github.hugolabe.Wike.desktop.in:4
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:8
 msgid "Wikipedia Reader"
-msgstr "Leitor da Wikipedia"
-
-#. Don't translate!
-#: ../data/com.github.hugolabe.Wike.desktop.in:5
-msgid "com.github.hugolabe.Wike"
-msgstr "com.github.hugolabe.Wike"
+msgstr "Leitor da Wikipédia"
 
 #. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
 msgid "Wikipedia;Encyclopedia;"
-msgstr "Wikipedia;Encyclopedia;"
+msgstr "Wikipedia;Encyclopedia;Wikipédia;Enciclopédia;"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:11
 msgid "Wike is a Wikipedia reader for the GNOME Desktop. Provides access to all the content of this online encyclopedia in a native application, with a simpler and distraction-free view of articles."
@@ -303,7 +287,7 @@ msgstr "Wike é um leitor da Wikipédia para o Desktop GNOME. Provê acesso para
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:20
 msgid "Multiple languages"
-msgstr "Várias linguagens"
+msgstr "Várias línguas"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:22
 msgid "List of recent articles"
@@ -319,29 +303,142 @@ msgstr "Busca de texto nos artigos"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:25
 msgid "Article table of contents"
-msgstr "Artigo tabela de conteúdos"
+msgstr "Índice do artigo"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
 msgid "View article in other languages"
-msgstr "Ver artigo em outras linguagens"
+msgstr "Ver artigo noutras línguas"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
 msgid "Features:"
 msgstr "Características:"
 
-#: ../src/prefs.py:75
+#: ../src/prefs.py:81
 msgid "Wikipedia main page"
-msgstr "Página principal da Wikipedia"
-
-#: ../data/ui/prefs.ui:81
-msgid "Use custom font for articles"
-msgstr "Usar fonte customizada nos artigos"
+msgstr "Página principal da Wikipédia"
 
 #: ../data/ui/menu.ui:50
 msgid "Dark Mode"
 msgstr "Modo escuro"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:28
 msgid "Dark mode"
 msgstr "Modo escuro"
+
+#: ../src/view.py:161
+msgid "Try again"
+msgstr "Tentar novamente"
+
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
+msgid "GNOME Shell search integration"
+msgstr "Integração de pesquisa do GNOME Shell"
+
+#: ../src/prefs.py:146
+msgid "Clear Historic?"
+msgstr "Limpar histórico?"
+
+#: ../src/prefs.py:147
+msgid "The history of visited articles will be deleted permanently."
+msgstr "O histórico de artigos visitados será excluído permanentemente."
+
+#: ../src/prefs.py:148
+msgid "Clear Historic"
+msgstr "Limpar histórico"
+
+#: ../src/prefs.py:165
+msgid "Clear Personal Data?"
+msgstr "Limpar dados pessoais?"
+
+#: ../src/prefs.py:166
+msgid "Cookies and cache data will be deleted permanently."
+msgstr "Cookies e dados de cache serão excluídos permanentemente."
+
+#: ../src/prefs.py:167
+msgid "Clear Data"
+msgstr "Apagar dados"
+
+#. Don't remove %s tag!
+#: ../src/wike-sp.in:71
+msgid "Search «%s» in Wikipedia"
+msgstr "Pesquisar «%s» na Wikipédia"
+
+#: ../data/ui/prefs.ui:23
+msgid "Home page"
+msgstr "Pagina inicial"
+
+#: ../data/ui/prefs.ui:24
+msgid "The page that will be displayed when Wike starts"
+msgstr "A página que será exibida quando o Wike iniciar"
+
+#: ../data/ui/prefs.ui:30
+msgid "Clear bookmarks on exit"
+msgstr "Limpar favoritos ao sair"
+
+#: ../data/ui/prefs.ui:31
+msgid "The bookmarks list will be cleared when exiting Wike"
+msgstr "A lista de favoritos será apagada ao sair do Wike"
+
+#: ../data/ui/prefs.ui:49
+msgid "Article View"
+msgstr "Visualização do artigo"
+
+#: ../data/ui/prefs.ui:52
+msgid "Font size"
+msgstr "Tamanho da fonte"
+
+#: ../data/ui/prefs.ui:53
+msgid "Font size for article view (default is 16)"
+msgstr "Tamanho da fonte para visualização do artigo (o padrão é 16)"
+
+#: ../data/ui/prefs.ui:70
+msgid "Use custom font"
+msgstr "Usar fonte personalizada"
+
+#: ../data/ui/prefs.ui:71
+msgid "Choose a font for the article view"
+msgstr "Escolha uma fonte para a visualização do artigo"
+
+#: ../data/ui/prefs.ui:84
+msgid "Preview popups in article links"
+msgstr "Visualizar pop-ups em links de artigos"
+
+#: ../data/ui/prefs.ui:85
+msgid "Show a preview of the article when hovering over a link"
+msgstr "Mostra uma prévia do artigo ao passar o mouse sobre um link"
+
+#: ../data/ui/prefs.ui:104
+msgid "Privacy"
+msgstr "Privacidade"
+
+#: ../data/ui/prefs.ui:110
+msgid "Search"
+msgstr "Pesquisa"
+
+#: ../data/ui/prefs.ui:113
+msgid "Allow live search on desktop"
+msgstr "Permitir pesquisa ao vivo no desktop"
+
+#: ../data/ui/prefs.ui:114
+msgid "Warning: all desktop searches will be sent to Wikipedia"
+msgstr "Aviso: todas as pesquisas na área de trabalho serão enviadas para a Wikipédia"
+
+#: ../data/ui/prefs.ui:132
+msgid "Personal Data"
+msgstr "Dados pessoais"
+
+#: ../data/ui/prefs.ui:136
+msgid "Wike will remember the history of visited articles"
+msgstr "Wike se lembrará do histórico dos artigos visitados"
+
+#: ../data/ui/prefs.ui:148 ../data/ui/prefs.ui:163
+msgid "Clear"
+msgstr "Limpar"
+
+#: ../data/ui/prefs.ui:158
+msgid "Clear personal data"
+msgstr "Limpar dados pessoais"
+
+#: ../data/ui/prefs.ui:159
+msgid "Cookies and cache data will be deleted"
+msgstr "Cookies e dados de cache serão excluídos"
 
