--- a/po/nl.po
+++ b/po/nl.po
@@ -27,11 +27,11 @@ msgstr "Controleer uw internetverbinding en probeer het opnieuw"
 msgid "Recent articles"
 msgstr "Recente artikelen"
 
-#: ../src/window.py:147 ../src/window.py:252
+#: ../src/window.py:150 ../src/window.py:255
 msgid "New bookmark: "
 msgstr "Nieuwe bladwijzer: "
 
-#: ../src/window.py:310
+#: ../src/window.py:313
 msgid "Wikipedia URL copied to clipboard"
 msgstr "De Wikipedia-url is gekopieerd naar het klembord"
 
@@ -193,7 +193,7 @@ msgstr "Voeg bladwijzer toe"
 msgid "Wikipedia Main Page"
 msgstr "Wikipedia-startpagina"
 
-#: ../src/prefs.py:75 ../data/ui/menu.ui:13
+#: ../src/prefs.py:81 ../data/ui/menu.ui:13
 msgid "Random article"
 msgstr "Willekeurig artikel"
 
@@ -233,47 +233,31 @@ msgstr "Over Wike"
 msgid "Behavior"
 msgstr "Gedrag"
 
-#: ../data/ui/prefs.ui:23
-msgid "When Wike starts load"
-msgstr "Als Wike iets laad"
-
-#: ../data/ui/prefs.ui:29
+#: ../data/ui/prefs.ui:135
 msgid "Keep a list of recent articles"
 msgstr "Lijst met recente artikelen bijhouden"
 
-#: ../data/ui/prefs.ui:43
-msgid "Clear bookmarks list on exit"
-msgstr "Bladwijzerlijst wissen na afsluiten"
-
-#: ../src/prefs.py:75
+#: ../src/prefs.py:81
 msgid "Last article"
 msgstr "Recentst gelezen artikel"
-
-#: ../data/ui/prefs.ui:61
-msgid "Appearance"
-msgstr "Vormgeving"
-
-#: ../data/ui/prefs.ui:64
-msgid "Font size for articles"
-msgstr "Tekstgrootte van artikelen"
 
 #: ../data/ui/prefs.ui:14
 msgid "General"
 msgstr "Algemeen"
 
-#: ../data/ui/prefs.ui:119
+#: ../data/ui/prefs.ui:184
 msgid "Filter available languages"
 msgstr "Beschikbare talen filteren"
 
-#: ../data/ui/prefs.ui:153
+#: ../data/ui/prefs.ui:218
 msgid "Select all"
 msgstr "Alles selecteren"
 
-#: ../data/ui/prefs.ui:165
+#: ../data/ui/prefs.ui:230
 msgid "Select none"
 msgstr "Niets selecteren"
 
-#: ../data/ui/prefs.ui:113
+#: ../data/ui/prefs.ui:178
 msgid "Languages"
 msgstr "Talen"
 
@@ -329,13 +313,9 @@ msgstr "Lees artikelen in andere talen"
 msgid "Features:"
 msgstr "Kenmerken:"
 
-#: ../src/prefs.py:75
+#: ../src/prefs.py:81
 msgid "Wikipedia main page"
 msgstr "Wikipedia-startpagina"
-
-#: ../data/ui/prefs.ui:81
-msgid "Use custom font for articles"
-msgstr "Eigen lettertype gebruiken"
 
 #: ../data/ui/menu.ui:50
 msgid "Dark Mode"
@@ -349,11 +329,116 @@ msgstr "Donker thema"
 msgid "Try again"
 msgstr "Opnieuw proberen"
 
-#: ../data/ui/prefs.ui:94
-msgid "Show preview popups in article links"
-msgstr "Voorvertoning tonen na aanwijzen van artikellink"
-
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
 msgid "GNOME Shell search integration"
 msgstr "GNOME Shell-zoekintegratie"
+
+#: ../src/prefs.py:146
+msgid "Clear Historic?"
+msgstr "Geschiedenis wissen?"
+
+#: ../src/prefs.py:147
+msgid "The history of visited articles will be deleted permanently."
+msgstr "De lijst met bekeken artikelen wordt hierdoor permanent gewist."
+
+#: ../src/prefs.py:148
+msgid "Clear Historic"
+msgstr "Geschiedenis wissen"
+
+#: ../src/prefs.py:165
+msgid "Clear Personal Data?"
+msgstr "Persoonlijke gegevens wissen?"
+
+#: ../src/prefs.py:166
+msgid "Cookies and cache data will be deleted permanently."
+msgstr "De cookies en cache worden hierdoor permanent gewist."
+
+#: ../src/prefs.py:167
+msgid "Clear Data"
+msgstr "Gegevens wissen"
+
+#. Don't remove %s tag!
+#: ../src/wike-sp.in:71
+msgid "Search «%s» in Wikipedia"
+msgstr "«%s» opzoeken op Wikipedia"
+
+#: ../data/ui/prefs.ui:23
+msgid "Home page"
+msgstr "Beginpagina"
+
+#: ../data/ui/prefs.ui:24
+msgid "The page that will be displayed when Wike starts"
+msgstr "De pagina die wordt getoond na het openen van Wike"
+
+#: ../data/ui/prefs.ui:30
+msgid "Clear bookmarks on exit"
+msgstr "Bladwijzers wissen na afsluiten"
+
+#: ../data/ui/prefs.ui:31
+msgid "The bookmarks list will be cleared when exiting Wike"
+msgstr "Wis de bladwijzerlijst na het afsluiten van Wike"
+
+#: ../data/ui/prefs.ui:49
+msgid "Article View"
+msgstr "Artikelweergave"
+
+#: ../data/ui/prefs.ui:52
+msgid "Font size"
+msgstr "Tekstgrootte"
+
+#: ../data/ui/prefs.ui:53
+msgid "Font size for article view (default is 16)"
+msgstr "De tekstgrootte in de artikelweergave (standaard: 16)"
+
+#: ../data/ui/prefs.ui:70
+msgid "Use custom font"
+msgstr "Aangepast lettertype gebruiken"
+
+#: ../data/ui/prefs.ui:71
+msgid "Choose a font for the article view"
+msgstr "Kies een lettertype voor de artikelweergave"
+
+#: ../data/ui/prefs.ui:84
+msgid "Preview popups in article links"
+msgstr "Links voorvertonen"
+
+#: ../data/ui/prefs.ui:85
+msgid "Show a preview of the article when hovering over a link"
+msgstr "Toon een voorvertoning van een artikel na het aanwijzen van een link"
+
+#: ../data/ui/prefs.ui:104
+msgid "Privacy"
+msgstr "Privacy"
+
+#: ../data/ui/prefs.ui:110
+msgid "Search"
+msgstr "Zoeken"
+
+#: ../data/ui/prefs.ui:113
+msgid "Allow live search on desktop"
+msgstr "Live-zoeken gebruiken"
+
+#: ../data/ui/prefs.ui:114
+msgid "Warning: all desktop searches will be sent to Wikipedia"
+msgstr "Waarschuwing: alle zoekopdrachten worden gedeeld met Wikipedia"
+
+#: ../data/ui/prefs.ui:132
+msgid "Personal Data"
+msgstr "Persoonlijke gegevens"
+
+#: ../data/ui/prefs.ui:136
+msgid "Wike will remember the history of visited articles"
+msgstr "Wike bewaart de geschiedenis van bezochte artikelen"
+
+#: ../data/ui/prefs.ui:148 ../data/ui/prefs.ui:163
+msgid "Clear"
+msgstr "Wissen"
+
+#: ../data/ui/prefs.ui:158
+msgid "Clear personal data"
+msgstr "Persoonlijke gegevens wissen"
+
+#: ../data/ui/prefs.ui:159
+msgid "Cookies and cache data will be deleted"
+msgstr "De cookies en cache worden gewist"
 
