--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+wike (1.5.1) focal; urgency=medium
+
+  * Privacy improvements & translations
+
 wike (1.5.0) focal; urgency=medium
 
   * New release with GNOME Shell search integration
